Convert use of [hidden] to Angular *ngIf
Fixes AB#628

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -16,13 +16,13 @@
         </ion-item>
       </ion-radio-group>
       <p class="ion-margin-top">
-        <ion-button [hidden]="!credentialTypeChoice"
+        <ion-button *ngIf="credentialTypeChoice"
                     (click)="submitCredentialType()"
                     size="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </p>
   </dialogue-turn>
-  <dialogue-turn [hidden]="!programChosen">
+  <dialogue-turn *ngIf="programChosen">
     <p>
       {{ 'personal.choose-credential-type.conclusion-program'|translate }}
     </p>
@@ -35,7 +35,7 @@
 
   </dialogue-turn>
   <dialogue-turn actor="self"
-                 [hidden]="!programChosen"
+                 *ngIf="programChosen"
   >
       <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew"
                        (ionChange)="changeCredentialType($event, 'create-id')"
@@ -48,7 +48,7 @@
         </ion-item>
       </ion-radio-group>
       <p class="ion-margin-top">
-        <ion-button [hidden]="!credentialTypeChoiceNew"
+        <ion-button *ngIf="credentialTypeChoiceNew"
                     (click)="submitCredentialTypeNew()"
                     size="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
