--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -27,7 +27,7 @@
           ></ion-input>
         </div>
         <div class="ion-margin-top">
-          <ion-button [hidden]="!create || initialInput"
+          <ion-button *ngIf="create && !initialInput"
                       (click)="initialInput=true;"
                       type="button"
           >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
@@ -42,14 +42,14 @@
             ></ion-input>
           </div>
           <div class="ion-margin-top">
-            <ion-button [hidden]="!create || !confirm"
+            <ion-button *ngIf="create && confirm"
                         type="submit"
             >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
           </div>
         </div>
       </form>
     </dialogue-turn>
-    <dialogue-turn [hidden]="!passwordCreated">
+    <dialogue-turn *ngIf="passwordCreated">
       {{ 'personal.create-password.conclusion'|translate }}
     </dialogue-turn>
   </section>
