--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -27,7 +27,7 @@
       </ion-item>
     </ion-radio-group>
     <div class="ion-margin-top">
-      <ion-button [hidden]="!programChoice"
+      <ion-button *ngIf="programChoice"
                   (click)="submitProgram()"
                   type="submit"
                   size="block"
