Add 'spacer'-option, to always trigger a sensible 'change'-event

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -17,6 +17,7 @@
       </ion-button>
 
       <select name="debugSections" (change)="insertSection($event.target.value)">
+        <option></option>
         <option *ngFor="let section of debugSections;">{{ section }}</option>
       </select>
     </ion-row>
