Disable input after submit (for create-password)
Related AB#592

--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -23,6 +23,7 @@
                      name="create"
                      [(ngModel)]="create"
                      ngDefaultControl
+                     [disabled]="passwordCreated"
                      autocomplete="new-password"
           ></ion-input>
         </div>
@@ -39,10 +40,12 @@
                        name="confirm"
                        [(ngModel)]="confirm"
                        ngDefaultControl
+                       [disabled]="passwordCreated"
             ></ion-input>
           </div>
           <div class="ion-margin-top">
-            <ion-button *ngIf="create && confirm"
+            <ion-button *ngIf="create && confirm && !passwordCreated"
+                        [disabled]="passwordCreated"
                         type="submit"
             >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
           </div>
