--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -23,12 +23,15 @@
             {{ program.description }}
           </ion-note>
         </ion-label>
-        <ion-radio value="{{ program.id }}"></ion-radio>
+        <ion-radio [value]="program.id"
+                   [disabled]="programChosen"
+        ></ion-radio>
       </ion-item>
     </ion-radio-group>
     <div class="ion-margin-top">
-      <ion-button *ngIf="programChoice"
+      <ion-button *ngIf="programChoice && !programChosen"
                   (click)="submitProgram()"
+                  [disabled]="programChosen"
                   type="submit"
                   size="block"
       >{{ 'shared.submit-button'|translate }}</ion-button>
