Align building/output of Documents-lists

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -101,8 +101,10 @@
     <p>
       {{ 'personal.enroll-in-program.prepare-documents'|translate }}
     </p>
-    <p>
-      {{ program?.meetingDocuments|json }}
-    </p>
+    <ul class="ion-no-padding ion-padding-start">
+      <li *ngFor="let document of program?.meetingDocuments">
+        {{ document }}
+      </li>
+    </ul>
   </dialogue-turn>
 </section>
