AB#649 read QR-code as object with did+programId

--- a/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
@@ -6,7 +6,7 @@
     <ion-button (click)="scanQrCode()">{{ 'personal.scan-qr.scan-button'|translate }}</ion-button>
   </dialogue-turn>
   <dialogue-turn [hidden]="!did">
-    {{ 'personal.scan-qr.conclusion'|translate }} {{did}}.
+    {{ 'personal.scan-qr.conclusion1'|translate }} {{did}} {{ 'personal.scan-qr.conclusion2'|translate }} {{programId}}.
   </dialogue-turn>
 </section>
      
