Rename common properties to consistent name + define in Interface

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -46,14 +46,14 @@
         >
           <ion-label>{{ 'personal.choose-credential-type.option2'|translate }}</ion-label>
           <ion-radio value="create-id"
-                     [disabled]="typeChosenNew"
+                     [disabled]="isDisabled"
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
       <p class="ion-margin-top">
-        <ion-button *ngIf="credentialTypeChoiceNew && !typeChosenNew"
+        <ion-button *ngIf="credentialTypeChoiceNew && !isDisabled"
                     (click)="submitCredentialTypeNew()"
-                    [disabled]="typeChosenNew"
+                    [disabled]="isDisabled"
                     size="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </p>
