--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -23,7 +23,7 @@
                      name="create"
                      [(ngModel)]="create"
                      ngDefaultControl
-                     [disabled]="passwordCreated"
+                     [disabled]="isDisabled"
                      autocomplete="new-password"
           ></ion-input>
         </div>
@@ -40,19 +40,19 @@
                        name="confirm"
                        [(ngModel)]="confirm"
                        ngDefaultControl
-                       [disabled]="passwordCreated"
+                       [disabled]="isDisabled"
             ></ion-input>
           </div>
           <div class="ion-margin-top">
-            <ion-button *ngIf="create && confirm && !passwordCreated"
-                        [disabled]="passwordCreated"
+            <ion-button *ngIf="create && confirm && !isDisabled"
+                        [disabled]="isDisabled"
                         type="submit"
             >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
           </div>
         </div>
       </form>
     </dialogue-turn>
-    <dialogue-turn *ngIf="passwordCreated">
+    <dialogue-turn *ngIf="isDisabled">
       {{ 'personal.create-password.conclusion'|translate }}
     </dialogue-turn>
   </section>
