--- a/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
+++ b/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
@@ -24,7 +24,7 @@
                    name="name"
                    [(ngModel)]="name"
                    ngDefaultControl
-                   [disabled]="identitySubmitted"
+                   [disabled]="isDisabled"
         ></ion-input>
       </div>
       <div class="ion-margin-top">
@@ -34,18 +34,18 @@
                    placeholder="{{ 'personal.identity-form.dob-format' }}"
                    [(ngModel)]="dob"
                    ngDefaultControl
-                   [disabled]="identitySubmitted"
+                   [disabled]="isDisabled"
         ></ion-input>
       </div>
       <div class="ion-margin-top">
-        <ion-button *ngIf="name && dob && !identitySubmitted"
+        <ion-button *ngIf="name && dob && !isDisabled"
                     type="submit"
                     size="block"
         >{{ 'personal.identity-form.submit-button'|translate }}</ion-button>
       </div>
     </form>
   </dialogue-turn>
-  <dialogue-turn *ngIf="identitySubmitted">
+  <dialogue-turn *ngIf="isDisabled">
     {{ 'personal.identity-form.conclusion'|translate }}
   </dialogue-turn>
 </section>
