--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -18,19 +18,19 @@
       >
         <ion-label>{{ country.country }}</ion-label>
         <ion-radio [value]="country.id"
-                   [disabled]="countrySelected"
+                   [disabled]="isDisabled"
         ></ion-radio>
       </ion-item>
     </ion-radio-group>
     <div class="ion-margin-top">
-      <ion-button *ngIf="countryChoice && !countrySelected"
+      <ion-button *ngIf="countryChoice && !isDisabled"
                   (click)="submitCountry()"
                   size="block"
-                  [disabled]="countrySelected"
+                  [disabled]="isDisabled"
       >{{ 'shared.submit-button'|translate }}</ion-button>
     </div>
   </dialogue-turn>
-  <dialogue-turn *ngIf="countrySelected">
+  <dialogue-turn *ngIf="isDisabled">
     <p [innerHTML]="'personal.select-country.conclusion'|translate:{ country:countryChoiceName }"></p>
   </dialogue-turn>
 </section>
