--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -24,14 +24,14 @@
           </ion-note>
         </ion-label>
         <ion-radio [value]="program.id"
-                   [disabled]="programChosen"
+                   [disabled]="isDisabled"
         ></ion-radio>
       </ion-item>
     </ion-radio-group>
     <div class="ion-margin-top">
-      <ion-button *ngIf="programChoice && !programChosen"
+      <ion-button *ngIf="programChoice && !isDisabled"
                   (click)="submitProgram()"
-                  [disabled]="programChosen"
+                  [disabled]="isDisabled"
                   type="submit"
                   size="block"
       >{{ 'shared.submit-button'|translate }}</ion-button>
