Animate DialogueTurns in after each other
Fixes AB#614

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -1,6 +1,8 @@
 <section #chooseCredentialType>
   <dialogue-turn>
-    {{ 'personal.choose-credential-type.introduction'|translate }}
+    <p>
+      {{ 'personal.choose-credential-type.introduction'|translate }}
+    </p>
   </dialogue-turn>
   <dialogue-turn actor="self">
       <ion-radio-group [(ngModel)}]="credentialTypeChoice"
@@ -23,7 +25,9 @@
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </p>
   </dialogue-turn>
-  <dialogue-turn *ngIf="programChosen">
+  <dialogue-turn *ngIf="programChosen"
+                 [isSpoken]="programChosen"
+  >
     <p>
       {{ 'personal.choose-credential-type.conclusion-program'|translate }}
     </p>
@@ -37,6 +41,7 @@
   </dialogue-turn>
   <dialogue-turn actor="self"
                  *ngIf="programChosen"
+                 [isSpoken]="programChosen"
   >
       <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew"
                        (ionChange)="changeCredentialType($event, 'create-id')"
