--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -52,7 +52,9 @@
         </div>
       </form>
     </dialogue-turn>
-    <dialogue-turn *ngIf="isDisabled">
+    <dialogue-turn *ngIf="isDisabled"
+                   [isSpoken]="isDisabled"
+    >
       {{ 'personal.create-password.conclusion'|translate }}
     </dialogue-turn>
   </section>
