--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -27,7 +27,9 @@
       </div>
     </form>
   </dialogue-turn>
-  <dialogue-turn *ngIf="isDisabled">
+  <dialogue-turn *ngIf="isDisabled"
+                 [isSpoken]="isDisabled"
+  >
     <p [innerHTML]="'personal.select-language.result'|translate:{ language:languageChoiceName }"></p>
   </dialogue-turn>
 </section>
