--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,13 +1,16 @@
 <section>
-  <dialogue-turn [hidden]="!credentialReceived">
+  <dialogue-turn *ngIf="!credentialReceived"
+                 [isSpoken]="!credentialReceived"
+  >
     <p>
       {{ 'personal.store-credential.received'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn [hidden]="!credentialStored">
+  <dialogue-turn *ngIf="!credentialReceived"
+                 [isSpoken]="!credentialReceived"
+  >
     <p>
       {{ 'personal.store-credential.stored'|translate }}
     </p>
   </dialogue-turn>
 </section>
-  
