--- a/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
+++ b/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
@@ -26,7 +26,9 @@
          </p>
       </form>
     </dialogue-turn>
-    <dialogue-turn *ngIf="needsReceived">
+    <dialogue-turn *ngIf="needsReceived"
+                   [isSpoken]="needsReceived"
+    >
       <p>
         {{ 'personal.initial-needs.conclusion'|translate }}
       </p>
