Make questions appear one-by-one
Fixes AB#528

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -12,9 +12,9 @@
     </p>
   </dialogue-turn>
   <dialogue-turn actor="self"
-                 *ngFor="let question of questions; let i=index"
-                [isConnected]="i > 0"
-                [isSpoken]="i >= 0"
+                 *ngFor="let question of questions; let i=index; first as isFirst;"
+                [isConnected]="!isFirst"
+                [isSpoken]="isFirst"
   >
     <ion-label>
       {{ question.label }}
@@ -43,7 +43,11 @@
       </div>
     </div>
   </dialogue-turn>
-  <dialogue-turn actor="self" isConnected="true">
+  <dialogue-turn actor="self"
+                 isConnected="true"
+                 *ngIf="allQuestionsShown"
+                 [isSpoken]="allQuestionsShown"
+  >
     <p>
       <ion-button type="submit"
                   (click)="submit()"
