AB#603 Hand-over completion-time to conversation-history
+ Fix time-formatting

--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -30,7 +30,7 @@
         <ion-note class="ion-float-end ion-text-end"
                   [color]="isSelf ? '' : 'light'"
         >
-          <small>{{ moment|date:"EEEE, d LLL" }} - <strong>{{ moment|date:"hh:mm" }}</strong></small>
+          <small>{{ moment|date:"EEEE, d LLL" }} - <strong>{{ moment|date:"HH:mm" }}</strong></small>
         </ion-note>
       </ion-card-content>
     </ion-card>
