AB#42 Prevent executing Sovrin-flow more then once
Fixes AB#664

--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -45,7 +45,7 @@
           </div>
           <div class="ion-margin-top">
             <ion-button *ngIf="create && confirm && !isDisabled"
-                        [disabled]="isDisabled"
+                        [disabled]="isInProgress || isDisabled"
                         type="submit"
             >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
           </div>
