Added submitting of proof and inclusion status to PA-app AB#380

--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -4,9 +4,14 @@
             {{ 'personal.handle-proof.creating'|translate }}
         </p>
     </dialogue-turn>
-    <dialogue-turn [hidden]="!inclusionStatus">
+    <dialogue-turn [hidden]="!inclusionStatusNegative">
         <p>
             {{ 'personal.handle-proof.inclusion-status-negative'|translate }}
+        </p>
+    </dialogue-turn>
+    <dialogue-turn [hidden]="!inclusionStatusPositive">
+        <p>
+            {{ 'personal.handle-proof.inclusion-status-positive'|translate }}
         </p>
     </dialogue-turn>
 </section>
